# AI-Kentsel-Donusum-Mimari

./: .gitignore  README.md  backend.py  main.py  projects.db  pyproject.toml
frontend/: app.js  index.html
frontend/geo/: scenarios.geojson
